[package]
name = "unix_socket2"
version = "0.5.3"
authors = ["Steven Fackler <sfackler@gmail.com>", "Jethro Beekman <jethro@fortanix.com>"]
license = "MIT/Apache-2.0"
description = "Unix domain socket bindings"
repository = "https://github.com/jethrogb/unix-socket2"
documentation = "https://docs.rs/unix-socket2"
readme = "README.md"
keywords = ["posix", "unix", "socket", "domain"]

[dependencies]
libc = "0.2.1"

[dev-dependencies]
tempdir = "0.3"
